add auto restart

--- a/thanos-store-gw/thanos_store.service
+++ b/thanos-store-gw/thanos_store.service
@@ -2,11 +2,16 @@
 Description=Thanos-StoreGW
 Wants=network-online.target
 After=network-online.target
+StartLimitIntervalSec=500
+StartLimitBurst=5
 
 [Service]
 User=prometheus
 Group=prometheus
 Type=simple
+Restart=on-failure
+RestartSec=5s
+
 ExecStart=/usr/local/bin/thanos \
     store \
     --log.level debug \
