--- a/node-wide-services/node-exporter/node_exporter.service
+++ b/node-wide-services/node-exporter/node_exporter.service
@@ -2,11 +2,15 @@
 Description=Node Exporter
 Wants=network-online.target
 After=network-online.target
+StartLimitIntervalSec=500
+StartLimitBurst=5
 
 [Service]
 User=prometheus
 Group=prometheus
 Type=simple
+Restart=on-failure
+RestartSec=5s
 ExecStart=/usr/local/bin/node_exporter
 
 [Install]
