--- a/node-wide-services/promtail/promtail-config.yml
+++ b/node-wide-services/promtail/promtail-config.yml
@@ -16,7 +16,7 @@ scrape_configs:
       labels:
         job: systemd-journal
         env: production
-        host: prometheus-ams-0
+        host: my-hostname
     relabel_configs:
       - source_labels: ['__journal__systemd_unit']
         target_label: 'unit'
