--- a/thanos-compact/thanos_compact.service
+++ b/thanos-compact/thanos_compact.service
@@ -2,11 +2,15 @@
 Description=Thanos-Compact
 Wants=network-online.target
 After=network-online.target
+StartLimitIntervalSec=500
+StartLimitBurst=5
 
 [Service]
 User=prometheus
 Group=prometheus
 Type=simple
+Restart=on-failure
+RestartSec=5s
 ExecStart=/usr/local/bin/thanos \
     compact \
     --log.level debug \
